kubernetes/main/apps/networking/traefik/addons/error-pages/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 10
      services:
        - kind: Service
          name: error-pages
          namespace: networking
          port: 8080
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
